"Updated index.html with new meta tags, favicon, and manifest references"

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg"/>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Welcome to Minnu's portfolio. Explore projects, skills, and experiences in web development, React, and more. Discover how creativity and technical expertise come together to build innovative solutions." />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Minnu | Portfolio" />
+    <meta property="og:description" content="Explore Minnu's projects, skills, and experiences in web development and React. Discover innovative solutions and creative expertise." />
+    <meta property="og:image" content="%PUBLIC_URL%/minnukota381.JPG" />
+    <meta property="og:url" content="https://minnu.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Additional Meta Tags -->
+    <meta name="author" content="Minnu" />
+    <meta name="keywords" content="Minnu, portfolio, web development, React, JavaScript, front-end developer, projects, skills, experience" />
+
     <title>Minnu | Portfolio</title>
   </head>
   <body>
@@ -16,3 +27,4 @@
     <div id="root"></div>
   </body>
 </html>
+
