"Updated meta tags and added Twitter and Apple Touch Icons in index.html"

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Welcome to Minnu's portfolio. Explore projects, skills, and experiences in web development, React, and more. Discover how creativity and technical expertise come together to build innovative solutions." />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Minnu | Portfolio" />
@@ -16,10 +14,28 @@
     <meta property="og:url" content="https://minnu.vercel.app/" />
     <meta property="og:type" content="website" />
 
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Minnu | Portfolio" />
+    <meta name="twitter:description" content="Explore Minnu's projects, skills, and experiences in web development and React. Discover innovative solutions and creative expertise." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/minnukota381.JPG" />
+
     <!-- Additional Meta Tags -->
     <meta name="author" content="Minnu" />
     <meta name="keywords" content="Minnu, portfolio, web development, React, JavaScript, front-end developer, projects, skills, experience" />
 
+    <!-- Apple Touch Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/minnukota381.JPG" />
+    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/minnukota381.JPG" />
+    <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/minnukota381.JPG" />
+    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/minnukota381.JPG" />
+    <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/minnukota381.JPG" />
+    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/minnukota381.JPG" />
+    <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/minnukota381.JPG" />
+    <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/minnukota381.JPG" />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    
     <title>Minnu | Portfolio</title>
   </head>
   <body>
@@ -27,4 +43,3 @@
     <div id="root"></div>
   </body>
 </html>
-
