--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta 
-      name="description"
-      content="Welcome to Minnu's portfolio. Explore projects, skills, and experiences in web development, React, and more. Discover how creativity and technical expertise come together to build innovative solutions." />
+    
+    <meta name="description" content="Minnu's Portfolio: Explore web development projects, technical skills, and experiences in React and more. Discover innovative solutions and creative expertise.">
     <!-- For browsers not supporting theme-color meta tag -->
     <meta name="color-scheme" content="dark light" />
     
